--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 	<div class="top-menu">
 		<ul class="inner">
-			<li><a href="#">About Me</a></li>
-			<li><a href="#">History</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="#about">About Me</a></li>
+			<li><a href="#history">History</a></li>
+			<li><a href="#contact">Contact</a></li>
 		</ul>
 	</div>
 	
@@ -38,7 +38,7 @@
 	</div>
 
 	<div class="about-section inner">
-		<h1>About</h1>
+		<h1><a name="about">About</a></h1>
 
 		<p class="title">
 			저는 사람들에게 도움을 주는 것이 꿈이고,<br>
@@ -49,7 +49,7 @@
 
 	<div class="history-section">
 		<div class="inner">
-			<h1>History</h1>
+			<h1><a name="history">History</a></h1>
 			<ul class="inner">
 				<li><div>asd</div></li>
 				<li><div>asd</div></li>
@@ -62,7 +62,7 @@
 
 	<div class="contact-section">
 		<div class="inner">
-			<h1>Contact</h1>
+			<h1><a name="contact"></a>Contact</h1>
 
 			<ul>
 				<li>email : akima777@naver.com</li>
