연혁 추가 작업

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
+	<link rel="stylesheet" href="css/history.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -48,16 +49,82 @@
 	</div>
 
 	<div class="history-section">
-		<div class="inner">
-			<h1><a name="history">History</a></h1>
-			<ul class="inner">
-				<li><div>asd</div></li>
-				<li><div>asd</div></li>
-				<li><div>asd</div></li>
-				<li><div>asd</div></li>
-				<li><div>asd</div></li>
-			</ul>
-		</div>
+		
+		<h1><a name="history">History</a></h1>
+		
+		<section class="cd-timeline js-cd-timeline">
+			<div class="container max-width-lg cd-timeline__container">
+				<div class="cd-timeline__block">
+					<div class="cd-timeline__img cd-timeline__img--picture"></div>
+		
+					<div class="cd-timeline__content text-component">
+						<p class="history-title">금연인</p>
+
+						<p class="color-contrast-medium history-detail">하루에 하나씩 줄여가는 금연 보조 안드로이드 애플리케이션입니다.</p>
+
+						<p class="color-contrast-medium history-detail">· 개발인원 : 1명</p>
+						<p class="color-contrast-medium history-detail">· 개발환경 : Android Studio, AWS EC2(Ubuntu)</p>
+						<p class="color-contrast-medium history-detail">· 프로토콜 : HTTP, TCP/IP</p>
+						<p class="color-contrast-medium history-detail">· 개발언어 : JAVA, PHP</p>
+						<p class="color-contrast-medium history-detail">· 웹서버 : Apache</p>
+						<p class="color-contrast-medium history-detail">· 데이터베이스 : MySql</p>
+		
+						<div class="flex justify-between items-center">
+							<span class="cd-timeline__date gy-date">2020.03 ~ 2020.04</span>
+							<a href="https://github.com/akima9/Habbit2" target="_blank" class="btn btn--subtle gy-btn">GitHub 바로가기</a>
+							<a href="https://play.google.com/store/apps/details?id=com.kgy.habbit2" target="_blank" class="btn btn--subtle gy-btn">플레이스토어 바로가기</a>
+							<a href="https://drive.google.com/file/d/1BCILnI4-02ov60AlStQbFaQx-rBeK6ym/view" target="_blank" class="btn btn--subtle gy-btn">PDF 바로가기</a>
+						</div>
+					</div> <!-- cd-timeline__content -->
+				</div> <!-- cd-timeline__block -->
+		
+				<div class="cd-timeline__block">
+					<div class="cd-timeline__img cd-timeline__img--movie"></div>
+		
+					<div class="cd-timeline__content text-component">
+						<p class="history-title">국내 방송 보상 모니터링 사업</p>
+
+						<p class="color-contrast-medium history-detail">국내 방송에 어떤 음악이 삽입되어 있고, 얼마나 플레이 되었는지 레포트 해주는 웹 애플리케이션입니다.</p>
+
+						<p class="color-contrast-medium history-detail">· 개발인원 : 2명</p>
+						<p class="color-contrast-medium history-detail">· 개발환경 : SublimeText</p>
+						<p class="color-contrast-medium history-detail">· 프로토콜 : HTTP, TCP/IP</p>
+						<p class="color-contrast-medium history-detail">· 개발언어 : PHP</p>
+						<p class="color-contrast-medium history-detail">· 웹서버 : Apache</p>
+						<p class="color-contrast-medium history-detail">· 데이터베이스 : Oracle</p>
+						
+						<div class="flex justify-between items-center">
+							<span class="cd-timeline__date gy-date">2019.05 ~ 2019.12</span>
+							<a href="http://castreport.cherrysoft.co.kr/" target="_blank" class="btn btn--subtle gy-btn">Web Site 바로가기</a>
+						</div>
+					</div> <!-- cd-timeline__content -->
+				</div> <!-- cd-timeline__block -->
+		
+				<div class="cd-timeline__block">
+					<div class="cd-timeline__img cd-timeline__img--picture">
+						<!-- <img src="./img/cd-icon-picture.svg" alt="Picture"> -->
+					</div> <!-- cd-timeline__img -->
+			
+					<div class="cd-timeline__content text-component">
+						<p class="history-title">우연(우리들의 연결고리)</p>
+
+						<p class="color-contrast-medium history-detail">동호회 모임, 비정기적인 모임, 소개팅을 서비스하는 웹 애플리케이션입니다.</p>
+
+						<p class="color-contrast-medium history-detail">· 개발인원 : 5명</p>
+						<p class="color-contrast-medium history-detail">· 개발환경 : Eclipse</p>
+						<p class="color-contrast-medium history-detail">· 프로토콜 : HTTP, TCP/IP</p>
+						<p class="color-contrast-medium history-detail">· 개발언어 : JAVA</p>
+						<p class="color-contrast-medium history-detail">· 웹서버 : Apache</p>
+						<p class="color-contrast-medium history-detail">· 데이터베이스 : Oracle</p>
+			
+						<div class="flex justify-between items-center">
+							<span class="cd-timeline__date gy-date">2018.12 ~ 2019.02</span>
+							<a href="https://github.com/akima9/Destiny/tree/master/Destiny" target="_blank" class="btn btn--subtle gy-btn">GitHub 바로가기</a>
+						</div>
+					</div> <!-- cd-timeline__content -->
+				</div> <!-- cd-timeline__block -->
+			</div>
+		</section> <!-- cd-timeline -->
 	</div>
 
 	<div class="contact-section">
