--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 	<script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=vc6syjyp4a"></script>
 </head>
@@ -132,8 +133,7 @@
 			<h1><a name="contact"></a>Contact</h1>
 
 			<ul>
-				<li>email : akima777@naver.com</li>
-				<li>phone : 010-8717-6757</li>
+				<li><i class="material-icons">email</i> akima777@naver.com</li>
 			</ul>
 
 			<div id="map" class="address" style="width:100%;height:400px;"></div>
