우연 git 링크 수정

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			
 						<div class="flex justify-between items-center">
 							<span class="cd-timeline__date gy-date">2018.12 ~ 2019.02</span>
-							<a href="https://github.com/akima9/Destiny/tree/master/Destiny" target="_blank" class="btn btn--subtle gy-btn">GitHub 바로가기</a>
+							<a href="https://github.com/bomi0503/Destiny" target="_blank" class="btn btn--subtle gy-btn">GitHub 바로가기</a>
 						</div>
 					</div> <!-- cd-timeline__content -->
 				</div> <!-- cd-timeline__block -->
