우연 WAS 내용 수정

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						<p class="color-contrast-medium history-detail">· 개발환경 : Eclipse</p>
 						<p class="color-contrast-medium history-detail">· 프로토콜 : HTTP, TCP/IP</p>
 						<p class="color-contrast-medium history-detail">· 개발언어 : JAVA</p>
-						<p class="color-contrast-medium history-detail">· 웹서버 : Apache</p>
+						<p class="color-contrast-medium history-detail">· WAS : Tomcat</p>
 						<p class="color-contrast-medium history-detail">· 데이터베이스 : Oracle</p>
 			
 						<div class="flex justify-between items-center">
