R&D 개발환경 수정

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<p class="color-contrast-medium history-detail">국내 방송에 어떤 음악이 삽입되어 있고, 얼마나 플레이 되었는지 레포트 해주는 웹 애플리케이션입니다.</p>
 
 						<p class="color-contrast-medium history-detail">· 개발인원 : 2명</p>
-						<p class="color-contrast-medium history-detail">· 개발환경 : SublimeText</p>
+						<p class="color-contrast-medium history-detail">· 개발환경 : SublimeText, CentOS</p>
 						<p class="color-contrast-medium history-detail">· 프로토콜 : HTTP, TCP/IP</p>
 						<p class="color-contrast-medium history-detail">· 개발언어 : PHP</p>
 						<p class="color-contrast-medium history-detail">· 웹서버 : Apache</p>
