상세내용추가

--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
 						<p class="color-contrast-medium history-detail">· 개발언어 : JAVA, PHP</p>
 						<p class="color-contrast-medium history-detail">· 웹서버 : Apache</p>
 						<p class="color-contrast-medium history-detail">· 데이터베이스 : MySql</p>
+						<p class="color-contrast-medium history-detail">· 상세내용</p>
+						<div class="detail-text-style">
+							<p class="color-contrast-medium history-detail">1. 전체적인 UX/UI</p>
+							<p class="color-contrast-medium history-detail">BottomNavigationView & Fragment를 사용하여 메뉴와 3개의 화면(홈, 통계, 계정)을 구현하였습니다.</p>
+							<p class="color-contrast-medium history-detail">CalendarView를 사용하여 달력 UI 구현하였습니다.</p>
+							<p class="color-contrast-medium history-detail">2. 자동로그인</p>
+							<p class="color-contrast-medium history-detail">sharedpreferences를 사용하여 자동로그인 구현하였습니다.</p>
+							<p class="color-contrast-medium history-detail">3. 하루 단위 정보 저장</p>
+							<p class="color-contrast-medium history-detail">Linux crontab을 사용하여 DB에 사용자의 일별 목표개수와 흡연횟수를 저장하였습니다.</p>
+						</div>
 		
 						<div class="flex justify-between items-center">
 							<span class="cd-timeline__date gy-date">2020.03 ~ 2020.04</span>
@@ -93,6 +103,15 @@
 						<p class="color-contrast-medium history-detail">· 개발언어 : PHP</p>
 						<p class="color-contrast-medium history-detail">· 웹서버 : Apache</p>
 						<p class="color-contrast-medium history-detail">· 데이터베이스 : Oracle</p>
+						<p class="color-contrast-medium history-detail">· 상세내용</p>
+						<div class="detail-text-style">
+							<p class="color-contrast-medium history-detail">1. 파일업로드</p>
+							<p class="color-contrast-medium history-detail">jQuery를 사용하여 드래그 & 드롭 방식의 파일 업로드를 구현하였습니다.</p>
+							<p class="color-contrast-medium history-detail">2. 영상 정보</p>
+							<p class="color-contrast-medium history-detail">curl을 사용하여 페이지 내에서 영상 url만 선택하여 가지고 올 수 있도록 구현하였습니다.</p>
+							<p class="color-contrast-medium history-detail">3. 인증 메일</p>
+							<p class="color-contrast-medium history-detail">PHP Mailer를 사용하여 회원 가입시 인증 메일이 보내지도록 구현하였습니다.</p>
+						</div>
 						
 						<div class="flex justify-between items-center">
 							<span class="cd-timeline__date gy-date">2019.05 ~ 2019.12</span>
@@ -117,7 +136,19 @@
 						<p class="color-contrast-medium history-detail">· 개발언어 : JAVA</p>
 						<p class="color-contrast-medium history-detail">· WAS : Tomcat</p>
 						<p class="color-contrast-medium history-detail">· 데이터베이스 : Oracle</p>
-			
+						<p class="color-contrast-medium history-detail">· 상세내용</p>
+						<div class="detail-text-style">
+							<p class="color-contrast-medium history-detail">1. Summernote</p>
+							<p class="color-contrast-medium history-detail">글을 작성하는 부분에 이미지를 넣을 수 있도록 textarea에 summernote api를 적용시켰습니다.</p>
+							<p class="color-contrast-medium history-detail">2. 댓글</p>
+							<p class="color-contrast-medium history-detail">댓글 기능은 모두 Ajax를 사용하여 RestController에서 CRUD를 처리하도록 작업하였습니다.</p>
+							<p class="color-contrast-medium history-detail">3. 전체적인 UX/UI</p>
+							<p class="color-contrast-medium history-detail">html5, css3, Jquery로 전체적인 UI를 만들었습니다.</p>
+							<p class="color-contrast-medium history-detail">4. DB 설계</p>
+							<p class="color-contrast-medium history-detail">DB 설계에서 고민했던 부분은 파일을 업로드를 무제한으로 하도록 테이블을 하나 더 만드는 것과 댓글 기능에서 대댓글이 부 
+								모 댓글을 알도록 설계하는 부분이였습니다.</p>
+						</div>
+
 						<div class="flex justify-between items-center">
 							<span class="cd-timeline__date gy-date">2018.12 ~ 2019.02</span>
 							<a href="https://github.com/bomi0503/Destiny" target="_blank" class="btn btn--subtle gy-btn">GitHub 바로가기</a>
