--- a/index.html
+++ b/index.html
@@ -29,9 +29,30 @@
 			});
 
 		};//end scroll()
+// 		jQuery(document).ready(function(){
+//    $('h1').mousemove(function(e){
+//      var rXP = (e.pageX - this.offsetLeft-$(this).width()/2);
+//      var rYP = (e.pageY - this.offsetTop-$(this).height()/2);
+//      $('h1').css('text-shadow', +rYP/10+'px '+rXP/80+'px rgba(227,6,19,.8), '+rYP/8+'px '+rXP/60+'px rgba(255,237,0,1), '+rXP/70+'px '+rYP/12+'px rgba(0,159,227,.7)');
+//    });
+// });
 	</script>
+	<!-- <style>
+		body{
+			text-align:center;
+			background:#dfdfdf;
+		}
+		h1{
+			text-transform:uppercase;
+			font-size:72px;
+			font-family:'Verdana';
+			padding:30px;
+		}
+	</style> -->
 </head>
 <body>
+
+	<!-- <h1>3d text effect</h1> -->
 
 	<div class="top-menu">
 		<ul class="inner">
