이력서 리팩토리

--- a/index.html
+++ b/index.html
@@ -2,222 +2,11 @@
 <html lang="ko">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>웹 개발자 김기용</title>
-	<meta name="keywords" content="">
-	<meta name="description" content="">
-	<meta name="author" content="">
-	
-	<link rel="stylesheet" href="css/history.css">
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-	<script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=vc6syjyp4a"></script>
-
-	<script>
-		function scroll(param){
-
-			var element = document.querySelector(param);
-			var absoluteTop = window.pageYOffset + element.getBoundingClientRect().top; //절대 Y좌표값
-
-			window.scrollTo({
-				top: absoluteTop-100,
-				behavior: 'smooth'
-			});
-
-		};//end scroll()
-// 		jQuery(document).ready(function(){
-//    $('h1').mousemove(function(e){
-//      var rXP = (e.pageX - this.offsetLeft-$(this).width()/2);
-//      var rYP = (e.pageY - this.offsetTop-$(this).height()/2);
-//      $('h1').css('text-shadow', +rYP/10+'px '+rXP/80+'px rgba(227,6,19,.8), '+rYP/8+'px '+rXP/60+'px rgba(255,237,0,1), '+rXP/70+'px '+rYP/12+'px rgba(0,159,227,.7)');
-//    });
-// });
-	</script>
-	<!-- <style>
-		body{
-			text-align:center;
-			background:#dfdfdf;
-		}
-		h1{
-			text-transform:uppercase;
-			font-size:72px;
-			font-family:'Verdana';
-			padding:30px;
-		}
-	</style> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>김기용 | 웹개발자</title>
 </head>
 <body>
-
-	<!-- <h1>3d text effect</h1> -->
-
-	<div class="top-menu">
-		<ul class="inner">
-			<li><a href="javascript:scroll('#home');">Home</a></li>
-			<li><a href="javascript:scroll('#about');">About</a></li>
-			<li><a href="javascript:scroll('#history');">History</a></li>
-			<li><a href="javascript:scroll('#contact')">Contact</a></li>
-		</ul>
-	</div>
 	
-	<div id="home" class="main-section">
-		<div class="inner">
-			<h1>WEB DEVELOPER</h1>
-			<h2>김기용</h2>
-			<ul>
-				<li><a href="https://www.instagram.com/gotgyong/?hl=ko" target="_blank"><i class="fa fa-instagram"></i></a></li>
-				<li><a href="https://github.com/akima9" target="_blank"><i class="fa fa-github"></i></a></li>
-			</ul>
-			<div class="profile-img"></div>
-		</div>
-	</div>
-
-	<div class="about-section inner">
-		<h1><a id="about" name="about">About</a></h1>
-
-		<p class="title">
-			저는 사람들에게 도움을 주는 것이 꿈이고,<br>
-			그 꿈을 실현할 수 있는 개발자가 되는 것이 목표입니다.
-		</p>
-
-	</div>
-
-	<div class="history-section">
-		
-		<h1><a id="history" name="history">History</a></h1>
-		
-		<section class="cd-timeline js-cd-timeline">
-			<div class="container max-width-lg cd-timeline__container">
-				<div class="cd-timeline__block">
-					<div class="cd-timeline__img cd-timeline__img--picture"></div>
-		
-					<div class="cd-timeline__content text-component">
-						<p class="history-title">금연인</p>
-
-						<p class="color-contrast-medium history-detail">하루에 하나씩 줄여가는 금연 보조 안드로이드 애플리케이션입니다.</p>
-
-						<p class="color-contrast-medium history-detail">· 개발인원 : 1명</p>
-						<p class="color-contrast-medium history-detail">· 개발환경 : Android Studio, AWS EC2(Ubuntu)</p>
-						<p class="color-contrast-medium history-detail">· 프로토콜 : HTTP, TCP/IP</p>
-						<p class="color-contrast-medium history-detail">· 개발언어 : JAVA, PHP</p>
-						<p class="color-contrast-medium history-detail">· 웹서버 : Apache</p>
-						<p class="color-contrast-medium history-detail">· 데이터베이스 : MySql</p>
-						<p class="color-contrast-medium history-detail">· 상세내용</p>
-						<div class="detail-text-style">
-							<p class="color-contrast-medium history-detail">1. 전체적인 UX/UI</p>
-							<p class="color-contrast-medium history-detail">BottomNavigationView & Fragment를 사용하여 메뉴와 3개의 화면(홈, 통계, 계정)을 구현하였습니다.</p>
-							<p class="color-contrast-medium history-detail">CalendarView를 사용하여 달력 UI 구현하였습니다.</p>
-							<p class="color-contrast-medium history-detail">2. 자동로그인</p>
-							<p class="color-contrast-medium history-detail">sharedpreferences를 사용하여 자동로그인 구현하였습니다.</p>
-							<p class="color-contrast-medium history-detail">3. 하루 단위 정보 저장</p>
-							<p class="color-contrast-medium history-detail">Linux crontab을 사용하여 DB에 사용자의 일별 목표개수와 흡연횟수를 저장하였습니다.</p>
-						</div>
-		
-						<div class="flex justify-between items-center">
-							<span class="cd-timeline__date gy-date">2020.03 ~ 2020.04</span>
-							<a href="https://github.com/akima9/Habbit2" target="_blank" class="btn btn--subtle gy-btn">GitHub 바로가기</a>
-							<a href="https://play.google.com/store/apps/details?id=com.kgy.habbit2" target="_blank" class="btn btn--subtle gy-btn">플레이스토어 바로가기</a>
-							<a href="https://drive.google.com/file/d/1BCILnI4-02ov60AlStQbFaQx-rBeK6ym/view" target="_blank" class="btn btn--subtle gy-btn">PDF 바로가기</a>
-						</div>
-					</div> <!-- cd-timeline__content -->
-				</div> <!-- cd-timeline__block -->
-		
-				<div class="cd-timeline__block">
-					<div class="cd-timeline__img cd-timeline__img--movie"></div>
-		
-					<div class="cd-timeline__content text-component">
-						<p class="history-title">국내 방송 보상 모니터링 사업</p>
-
-						<p class="color-contrast-medium history-detail">국내 방송에 어떤 음악이 삽입되어 있고, 얼마나 플레이 되었는지 레포트 해주는 웹 애플리케이션입니다.</p>
-
-						<p class="color-contrast-medium history-detail">· 개발인원 : 2명</p>
-						<p class="color-contrast-medium history-detail">· 개발환경 : SublimeText, CentOS</p>
-						<p class="color-contrast-medium history-detail">· 프로토콜 : HTTP, TCP/IP</p>
-						<p class="color-contrast-medium history-detail">· 개발언어 : PHP</p>
-						<p class="color-contrast-medium history-detail">· 웹서버 : Apache</p>
-						<p class="color-contrast-medium history-detail">· 데이터베이스 : Oracle</p>
-						<p class="color-contrast-medium history-detail">· 상세내용</p>
-						<div class="detail-text-style">
-							<p class="color-contrast-medium history-detail">1. 파일업로드</p>
-							<p class="color-contrast-medium history-detail">jQuery를 사용하여 드래그 & 드롭 방식의 파일 업로드를 구현하였습니다.</p>
-							<p class="color-contrast-medium history-detail">2. 영상 정보</p>
-							<p class="color-contrast-medium history-detail">curl을 사용하여 페이지 내에서 영상 url만 선택하여 가지고 올 수 있도록 구현하였습니다.</p>
-							<p class="color-contrast-medium history-detail">3. 인증 메일</p>
-							<p class="color-contrast-medium history-detail">PHP Mailer를 사용하여 회원 가입시 인증 메일이 보내지도록 구현하였습니다.</p>
-						</div>
-						
-						<div class="flex justify-between items-center">
-							<span class="cd-timeline__date gy-date">2019.05 ~ 2019.12</span>
-							<a href="http://castreport.cherrysoft.co.kr/" target="_blank" class="btn btn--subtle gy-btn">Web Site 바로가기</a>
-						</div>
-					</div> <!-- cd-timeline__content -->
-				</div> <!-- cd-timeline__block -->
-		
-				<div class="cd-timeline__block">
-					<div class="cd-timeline__img cd-timeline__img--picture">
-						<!-- <img src="./img/cd-icon-picture.svg" alt="Picture"> -->
-					</div> <!-- cd-timeline__img -->
-			
-					<div class="cd-timeline__content text-component">
-						<p class="history-title">우연(우리들의 연결고리)</p>
-
-						<p class="color-contrast-medium history-detail">동호회 모임, 비정기적인 모임, 소개팅을 서비스하는 웹 애플리케이션입니다.</p>
-
-						<p class="color-contrast-medium history-detail">· 개발인원 : 5명</p>
-						<p class="color-contrast-medium history-detail">· 개발환경 : Eclipse</p>
-						<p class="color-contrast-medium history-detail">· 프로토콜 : HTTP, TCP/IP</p>
-						<p class="color-contrast-medium history-detail">· 개발언어 : JAVA</p>
-						<p class="color-contrast-medium history-detail">· WAS : Tomcat</p>
-						<p class="color-contrast-medium history-detail">· 데이터베이스 : Oracle</p>
-						<p class="color-contrast-medium history-detail">· 상세내용</p>
-						<div class="detail-text-style">
-							<p class="color-contrast-medium history-detail">1. Summernote</p>
-							<p class="color-contrast-medium history-detail">글을 작성하는 부분에 이미지를 넣을 수 있도록 textarea에 summernote api를 적용시켰습니다.</p>
-							<p class="color-contrast-medium history-detail">2. 댓글</p>
-							<p class="color-contrast-medium history-detail">댓글 기능은 모두 Ajax를 사용하여 RestController에서 CRUD를 처리하도록 작업하였습니다.</p>
-							<p class="color-contrast-medium history-detail">3. 전체적인 UX/UI</p>
-							<p class="color-contrast-medium history-detail">html5, css3, Jquery로 전체적인 UI를 만들었습니다.</p>
-							<p class="color-contrast-medium history-detail">4. DB 설계</p>
-							<p class="color-contrast-medium history-detail">DB 설계에서 고민했던 부분은 파일을 업로드를 무제한으로 하도록 테이블을 하나 더 만드는 것과 댓글 기능에서 대댓글이 부 
-								모 댓글을 알도록 설계하는 부분이였습니다.</p>
-						</div>
-
-						<div class="flex justify-between items-center">
-							<span class="cd-timeline__date gy-date">2018.12 ~ 2019.02</span>
-							<a href="https://github.com/bomi0503/Destiny" target="_blank" class="btn btn--subtle gy-btn">GitHub 바로가기</a>
-						</div>
-					</div> <!-- cd-timeline__content -->
-				</div> <!-- cd-timeline__block -->
-			</div>
-		</section> <!-- cd-timeline -->
-	</div>
-
-	<div class="contact-section">
-		<div class="inner">
-			<h1><a id="contact" name="contact"></a>Contact</h1>
-
-			<ul>
-				<li><i class="material-icons">email</i> akima777@naver.com</li>
-			</ul>
-
-			<div id="map" class="address" style="width:100%;height:400px;"></div>
-		</div>
-	</div>
-
 </body>
 </html>
-
-<script>
-	var map = new naver.maps.Map('map', {
-    center: new naver.maps.LatLng(37.498445, 127.136467),
-    zoom: 15
-	});
-
-	var marker = new naver.maps.Marker({
-		position: new naver.maps.LatLng(37.498445, 127.136467),
-		map: map
-	});
-	</script>
