프로필 추가

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 	<title>김기용 | 웹개발자</title>
 </head>
 <body>
-	
+	<section id="profile">
+		<dl>
+			<dt>김기용</dt>
+			<dd>웹개발자</dd>
+		</dl>
+		<ul>
+			<li>email : akima777@naver.com</li>
+			<li>website : https://blog.naver.com/akima777</li>
+		</ul>
+	</section>
 </body>
 </html>
