이력서 리뉴얼

--- a/startbootstrap-resume-gh-pages/index.html
+++ b/startbootstrap-resume-gh-pages/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>웹개발자 김기용</title>
+        <title>Resume - Start Bootstrap Theme</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -40,19 +40,14 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        WEB
-                        <span class="text-primary">DEVELOPER</span>
+                        Clarence
+                        <span class="text-primary">Taylor</span>
                     </h1>
                     <div class="subheading mb-5">
-						<ul>
-							<li>이름 : 김기용</li>
-							<li>거주지 : 서울</li>
-							<li>이메일 : akima777@naver.com</li>
-						</ul>
+                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+                        <a href="mailto:name@email.com">name@email.com</a>
                     </div>
-                    <p class="lead mb-5">
-						백엔드 개발자입니다. 현재는 시스템 유지 보수, 신규 기능 개발 및 설계 등을 주요 업무로 하고 있습니다. 비즈니스 성장에 필요한 업무들을 자동화하여 사용자 뿐만 아니라 팀 구성원에게 편리함을 제공하는 일을 좋아합니다.
-					</p>
+                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
